--- a/css/custom.css
+++ b/css/custom.css
@@ -98,11 +98,7 @@ h1 {
 	color:#00b386;
 }
 
-table {
-	margin-left:50px;
-	width:100%;
-}
-
+/*index.html styling for desktop*/
 #profilePic img{
 	border:2px gray solid;
 }
@@ -111,14 +107,88 @@ table {
 	float:left;
 	margin-left:50px;
 	width:50%;
+	overflow:hidden;
 }
 
 #rightColumn {
 	float:right;
 	margin-right: 50px;
 	width:50%;
+	overflow:hidden;
 }
 
 #profilePic {
 	margin:auto;
+	display: block;
+	margin-top: 30px;
 }
+
+section {
+    width: 90%;
+    margin:auto;
+    overflow:hidden;
+}
+
+div#one {
+    float: left;
+    width:40%;
+    text-align: center;
+}
+div#two {
+	text-align:center;
+    float:right;
+    display:block;
+    width:60%;
+}
+
+#funHeader {
+	margin-top:40px;
+}
+
+#two h1 {
+	font-size: 70px;
+}
+
+#two h2 {
+	color:gray;
+}
+
+#headline {
+	margin-top:40px;
+}
+/*index.html styling for desktop*/
+
+/*index.html styling for mobile*/
+@media (max-width: 767px) {
+
+
+	div#one{
+		text-align:center;
+		margin:auto;
+		float:none;
+		width:100%;
+	}
+	
+	div#two {
+		margin:auto;
+		overflow:hidden;
+		float:none;
+		width:100%;
+	}
+	section {
+		margin:auto;
+	}
+
+	#two h1 {
+	font-size: 50px;
+	}
+
+	#profilePic {
+		margin-top:10px;
+	}
+
+	#headline {
+		margin-top:30px;
+	}
+}
+/*index.html styling for mobile*/
